# serializer version: 1
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_backup_power_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_backup_power_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Backup power active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backup power active',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backup_power_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_backup_power_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_backup_power_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Backup power active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_backup_power_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_grid_congestion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_grid_congestion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Grid congestion',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Grid congestion',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'grid_congestion_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_grid_congestion_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_grid_congestion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Grid congestion',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_grid_congestion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_home_optimization_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_home_optimization_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home optimization active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Home optimization active',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home_optimization_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_home_optimization_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_home_optimization_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Home optimization active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_home_optimization_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_load_balancing_overload-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_load_balancing_overload',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Load balancing overload',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Load balancing overload',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dynamic_load_balancing_overload_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_dynamic_load_balancing_overload_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.thuisbatterij_load_balancing_overload-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Load balancing overload',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_load_balancing_overload',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.zonneplan_electricity_price_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zonneplan_electricity_price_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electricity price low',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Electricity price low',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electricity_price_low',
    'unique_id': '00000000-0000-4000-8000-000000000001_electricity_price_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[in_low_price_block][binary_sensor.zonneplan_electricity_price_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zonneplan Electricity price low',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zonneplan_electricity_price_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_backup_power_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_backup_power_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Backup power active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backup power active',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backup_power_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_backup_power_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_backup_power_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Backup power active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_backup_power_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_grid_congestion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_grid_congestion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Grid congestion',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Grid congestion',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'grid_congestion_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_grid_congestion_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_grid_congestion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Grid congestion',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_grid_congestion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_home_optimization_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_home_optimization_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home optimization active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Home optimization active',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home_optimization_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_home_optimization_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_home_optimization_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Home optimization active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_home_optimization_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_load_balancing_overload-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_load_balancing_overload',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Load balancing overload',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Load balancing overload',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dynamic_load_balancing_overload_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_dynamic_load_balancing_overload_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.thuisbatterij_load_balancing_overload-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Load balancing overload',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_load_balancing_overload',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.zonneplan_electricity_price_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zonneplan_electricity_price_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electricity price low',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Electricity price low',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electricity_price_low',
    'unique_id': '00000000-0000-4000-8000-000000000001_electricity_price_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[no_prices_today][binary_sensor.zonneplan_electricity_price_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zonneplan Electricity price low',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zonneplan_electricity_price_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_backup_power_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_backup_power_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Backup power active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Backup power active',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'backup_power_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_backup_power_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_backup_power_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Backup power active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_backup_power_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_grid_congestion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_grid_congestion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Grid congestion',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Grid congestion',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'grid_congestion_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_grid_congestion_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_grid_congestion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Grid congestion',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_grid_congestion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_home_optimization_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_home_optimization_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Home optimization active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Home optimization active',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'home_optimization_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_home_optimization_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_home_optimization_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Home optimization active',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_home_optimization_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_load_balancing_overload-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.thuisbatterij_load_balancing_overload',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Load balancing overload',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Load balancing overload',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dynamic_load_balancing_overload_active',
    'unique_id': '00000000-0000-4000-8000-000000000201_dynamic_load_balancing_overload_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.thuisbatterij_load_balancing_overload-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thuisbatterij Load balancing overload',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.thuisbatterij_load_balancing_overload',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.zonneplan_electricity_price_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zonneplan_electricity_price_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electricity price low',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Electricity price low',
    'platform': 'zonneplan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electricity_price_low',
    'unique_id': '00000000-0000-4000-8000-000000000001_electricity_price_low',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[outside_low_price_block][binary_sensor.zonneplan_electricity_price_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zonneplan Electricity price low',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zonneplan_electricity_price_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
